feat: added master degree latex template

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -23,7 +23,7 @@
 % Wybór języka: \langpol, \langeng
 %-------------------------------------------------------------
 \facultyeiti    % Wydział Elektroniki i Technik Informacyjnych
-\EngineerThesis % Praca inżynierska
+\MasterThesis % Praca inżynierska
 \langpol % Praca w języku polskim
 
 \begin{document}
