chore: added titles author and so on

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -31,28 +31,21 @@
 %------------------
 % Strona tytułowa
 %------------------
-\instytut{XXXXXX}
-\kierunek{XXXXXX}
-\specjalnosc{XXXXXX}
+\instytut{Automatyki i Informatyki Stosowanej}
+\kierunek{Informatyka}
+\specjalnosc{Inteligetne Systemy}
 \title{
-    Niepotrzebnie długi i skomplikowany tytuł pracy \\
-    trudny do przeczytania, zrozumienia i wymówienia
+    Porównanie wydajności i możliwości współczesnych silników gier komputerowych
 }
 % Title in English for English theses
 % In English theses, you may remove this command
 \engtitle{
-    Unnecessarily long and complicated thesis' title \\
-    difficult to read, understand and pronounce
+    Comparison of performance and capabilities of modern computer games engines
 }
-% Title in Polish for English theses
-% Use it only in English theses
-\poltitle{
-    Niepotrzebnie długi i skomplikowany tytuł pracy \\
-    trudny do przeczytania, zrozumienia i wymówienia
-}
-\author{\{Imię i Nazwisko\}}
-\album{XXXXXX}
-\promotor{XXXXXX}
+
+\author{inż. Krzysztof Rudnicki}
+\album{307585}
+\promotor{dr inż. Michał Chwesiuk}
 \date{\the\year}
 \maketitle
 
