feat: added scaffold chapters

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -79,14 +79,14 @@
 \cleardoublepage % Zaczynamy od nieparzystej strony
 \pagestyle{headings}
 
-\input{tex/1-wstep}         % Wygodnie jest trzymać każdy rozdział w osobnym pliku.
-\input{tex/2-de-finibus}    % Umożliwia to również łatwą migrację do nowej wersji szablonu:
-\input{tex/3-code-listings} % zazwyczaj wystarczy podmienić plik src/wut-thesis.cls
-
- % Można też pisać rozdziały w jednym pliku.
-\clearpage % Zawsze zaczynamy rozdział od nowej strony
-\section{Summatio}
-\lipsum[4-10]
+\input{tex/1-wstep}                    % Wstęp
+\input{tex/2-przeglad-literatury}       % Przegląd literatury i istniejących rozwiązań
+\input{tex/3-silniki-gier}              % Charakterystyka współczesnych silników gier
+\input{tex/4-metodologia}               % Metodologia badań i kryteria porównania
+\input{tex/5-testy-wydajnosci}          % Testy wydajności
+\input{tex/6-analiza-mozliwosci}        % Analiza możliwości i funkcjonalności
+\input{tex/7-porownanie-wynikow}        % Porównanie wyników i analiza
+\input{tex/8-podsumowanie}              % Podsumowanie i wnioski
 
 %---------------
 % Bibliografia
