--- a/latex/tex/1-wstep.tex
+++ b/latex/tex/1-wstep.tex
@@ -1,22 +1,27 @@
 \clearpage % Rozdziały zaczynamy od nowej strony.
-\section{Praefatio}
+\section{Wstęp}
 
-% Akapit z cytatem
-\lipsum[1] \cite{goossens93}
+\subsection{Motywacja i cel pracy}
+Współczesny rynek gier komputerowych charakteryzuje się dynamicznym rozwojem technologicznym i rosnącymi wymaganiami zarówno twórców, jak i graczy. Wybór odpowiedniego silnika gier jest kluczową decyzją, która wpływa na cały proces tworzenia gry, jej wydajność oraz możliwości techniczne.
 
-% Przykładowy obrazek
-\begin{figure}[!h]
-    % Wyrównanie obrazka, szerokość i plik
-    % Zamiast width można też użyć height, etc.
-    \centering \includegraphics[width=0.5\linewidth]{logopw.png}
-    % Podpis umieszczamy pod obrazkiem
-    % znacznik \caption służy również do wygenerowania numeru obrazka
-    \caption{Tradycyjne godło Politechniki Warszawskiej}
-    % \label pozwala odwołać się do obrazka w innych miejscach za pomocą \ref
-    % odwołanie \ref renderuje się jako numer obrazka,
-    % dlatego zawsze najpierw używaj \caption a potem \label
-    \label{fig:tradycyjne-logo-pw}
-\end{figure}
+Celem niniejszej pracy jest kompleksowe porównanie wydajności i możliwości współczesnych silników gier komputerowych, ze szczególnym uwzględnieniem ich wpływu na proces tworzenia gier oraz końcową jakość produktu.
+
+\subsection{Zakres pracy}
+Praca obejmuje analizę następujących aspektów:
+\begin{itemize}
+    \item Wydajność renderowania grafiki 2D i 3D
+    \item Możliwości i funkcjonalności oferowane przez różne silniki
+    \item Łatwość użycia i krzywa uczenia się
+    \item Wsparcie dla różnych platform docelowych
+    \item Ekosystem narzędzi i społeczność deweloperska
+\end{itemize}
+
+\subsection{Struktura pracy}
+Praca składa się z następujących rozdziałów:
+% TODO: Dodać opis struktury po ukończeniu wszystkich rozdziałów
+
+\subsection{Metodologia}
+W pracy zastosowano metodologię badawczą opartą na analizie porównawczej, testach wydajnościowych oraz studium przypadków rzeczywistych projektów implementowanych w różnych silnikach gier.
 
 % \ref wyrenderuje się jako 'Reference to image 1.1'
 \lipsum[2] Reference to image \ref{fig:tradycyjne-logo-pw}.
