chore: copilot instructions md

--- a/latex/bibliografia.bib
+++ b/latex/bibliografia.bib
@@ -86,3 +86,125 @@
     howpublished = {Dostęp zdalny (14.03.2019): \url{https://github.com/ArturB/DCP-19}},
     year         = {2019}
 }
+
+% Game Engine Research Literature
+
+@article{ullmann2022game,
+    author    = {Ullmann, G. C. and Politowski, C. and Guéhéneuc, Y.-G. and Anquetil, N.},
+    title     = {Game engine comparative anatomy},
+    journal   = {International Conference on Software Architecture},
+    year      = {2022},
+    publisher = {Springer},
+    pages     = {117--136}
+}
+
+@article{christopoulou2017overview,
+    author    = {Christopoulou, E. and Xinogalos, S.},
+    title     = {Overview and comparative analysis of game engines for desktop and mobile devices},
+    journal   = {International Journal of Serious Games},
+    volume    = {4},
+    number    = {4},
+    year      = {2017},
+    pages     = {21--36}
+}
+
+@inproceedings{sharif2021game,
+    author    = {Sharif, K. H. and Ameen, S. Y.},
+    title     = {Game engines evaluation for serious game development in education},
+    booktitle = {2021 International Conference on Advanced Computer Applications},
+    year      = {2021},
+    pages     = {1--6},
+    publisher = {IEEE}
+}
+
+@inproceedings{pavkov2017comparison,
+    author    = {Pavkov, S. and Franković, I. and Hoblaj, M.},
+    title     = {Comparison of game engines for serious games},
+    booktitle = {2017 40th International Convention on Information and Communication Technology},
+    year      = {2017},
+    pages     = {728--733},
+    publisher = {IEEE}
+}
+
+@article{messaoudi2017performance,
+    author    = {Messaoudi, F. and Ksentini, A. and Simon, G.},
+    title     = {Performance analysis of game engines on mobile and fixed devices},
+    journal   = {ACM Transactions on Multimedia Computing, Communications, and Applications},
+    volume    = {13},
+    number    = {4},
+    year      = {2017},
+    pages     = {1--24}
+}
+
+@article{abramowicz2024comparative,
+    author    = {Abramowicz, K. and Borczuk, P.},
+    title     = {Comparative analysis of the performance of Unity and Unreal Engine game engines in 3D games},
+    journal   = {Journal of Computer Science Institute},
+    volume    = {30},
+    year      = {2024},
+    pages     = {1--8}
+}
+
+@mastersthesis{pattrasitidecha2014comparison,
+    author    = {Pattrasitidecha, A.},
+    title     = {Comparison and evaluation of 3D mobile game engines},
+    school    = {Chalmers University of Technology},
+    year      = {2014},
+    type      = {Master's thesis}
+}
+
+@inproceedings{vohera2021game,
+    author    = {Vohera, C. and Chheda, H. and Chouhan, D.},
+    title     = {Game engine architecture and comparative study of different game engines},
+    booktitle = {2021 12th International Conference on Computing Communication and Networking Technologies},
+    year      = {2021},
+    pages     = {1--7},
+    publisher = {IEEE}
+}
+
+@inproceedings{marks2008evaluation,
+    author    = {Marks, S. and Windsor, J. and Wünsche, B.},
+    title     = {Evaluation of game engines for simulated clinical training},
+    booktitle = {New Zealand Computer Science Research Student Conference},
+    year      = {2008},
+    pages     = {25--30}
+}
+
+@inproceedings{ali2016framework,
+    author    = {Ali, Z. and Usman, M.},
+    title     = {A framework for game engine selection for gamification and serious games},
+    booktitle = {2016 Future Technologies Conference},
+    year      = {2016},
+    pages     = {1--8},
+    publisher = {IEEE}
+}
+
+@article{barczak2019comparative,
+    author    = {Barczak, A. and Woźniak, H.},
+    title     = {Comparative study on game engines},
+    journal   = {Studia Informatica. System and Information Technology},
+    volume    = {23},
+    number    = {1},
+    year      = {2019},
+    pages     = {5--18}
+}
+
+@article{masood2022high,
+    author    = {Masood, Z. and Jiangbin, Z. and Irfan, M. and Ahmad, I.},
+    title     = {High‐performance virtual globe GPU terrain rendering using game engine},
+    journal   = {Computer Animation and Virtual Worlds},
+    volume    = {33},
+    number    = {6},
+    year      = {2022},
+    pages     = {e2108}
+}
+
+@article{firat2022sound,
+    author    = {Fırat, H. B. and Maffei, L. and Masullo, M.},
+    title     = {3D sound spatialization with game engines: the virtual acoustics performance of a game engine and a middleware for interactive audio design},
+    journal   = {Virtual Reality},
+    volume    = {26},
+    number    = {3},
+    year      = {2022},
+    pages     = {1181--1195}
+}
